--- a/.github/workflows/ikea.yml
+++ b/.github/workflows/ikea.yml
@@ -1,28 +1,25 @@
-name: IKEA Stock Watcher
+name: IKEA Stock Watcher (Daily)
 
 on:
   schedule:
-    # 每 15 分鐘跑一次（UTC，+8 變台灣時間），≒ 每月 2880 分鐘，可免費
-    - cron: '*/15 * * * *'
-  workflow_dispatch:        # 手動按鈕也能執行
+    - cron: '0 0 * * *'     # 每天 00:00 UTC → 台灣 08:00
+  workflow_dispatch:
 
 jobs:
   watch:
     runs-on: ubuntu-latest
-
     steps:
-      - name: 取出程式碼
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: 安裝 Python
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
-      - name: 安裝依賴
+      - name: Install dependencies
         run: pip install -r requirements.txt
 
-      - name: 執行監控腳本
+      - name: Run watcher
         env:
           BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
           CHAT_ID:   ${{ secrets.CHAT_ID }}
